--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     		 <h1>
 		         Hello! Chez Lilas.
 	         </h1>
-             <img src="profile-picture.png" alt="LILAS" width="300" height="285" class="img-circle">
+             <img src="https://github.com/LIUanq2/my-profile/blob/main/profile-picture.png" alt="LILAS" width="300" height="285" class="img-circle">
 	         <p>
 	             Je suis une fille du <strong>nord-est de la Chine</strong> née au 21ème siècle, et j'apprends récemment la programmation sur la plateforme <strong>Le Wagon</strong>. Voici mon introduction personnelle.
 
