--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     		 <h1>
 		         Hello! Chez Lilas.
 	         </h1>
-             <img src="https://github.com/LIUanq2/my-profile/blob/main/profile-picture.png" alt="LILAS" width="300" height="285" class="img-circle">
+             <img src="images/profile-picture.png" alt="LILAS" width="300" height="285" class="img-circle">
 	         <p>
 	             Je suis une fille du <strong>nord-est de la Chine</strong> née au 21ème siècle, et j'apprends récemment la programmation sur la plateforme <strong>Le Wagon</strong>. Voici mon introduction personnelle.
 
@@ -48,7 +48,7 @@
    	             Mon Personnage
              </h2>
              <img src="https://th.bing.com/th/id/R.e7479d5969e4673e18d023a7efd057db?rik=YRu3RT0LxyyjcA&riu=http%3a%2f%2fwww.quemsoueu.net%2fimages%2farticles%2festp.png&ehk=ZoMjpLRNbOGsfK851xKquvAgqYvMmX1wrD4UiRfUvcE%3d&risl=&pid=ImgRaw&r=0"alt="ESTP" width="130" height="180" class="img-shaded">
-             <p>
+             <p>images/
         	     <strong>ESTP ----<em>Entrepreneur</em></strong>
              </p>
              <a href="https://zh.wikipedia.org/wiki/ESTP" target="_blank" class="btn-brown">
